--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
      <img height="200" src="FOTO/maulid.jpg" width="200"/>
      <p>
       <br/>
-      Maulid Nabi Muhammad SAW
+      Maulid Nabi
      </p>
     </div>
    </div>
